Updated basic requirements